--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
     "angular": "^1.5.0",
-    "angular-ui-router": "^0.3.1"
+    "angular-animate": "^1.5.7",
+    "angular-touch": "^1.5.7",
+    "angular-ui-bootstrap": "^2.0.0",
+    "angular-ui-router": "^0.3.1",
+    "bootstrap": "^3.3.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0-beta.2",
@@ -21,6 +25,7 @@
     "eslint-loader": "^1.3.0",
     "eslint-plugin-babel": "^3.1.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "gulp": "gulpjs/gulp#4ed9a4a3275559c73a396eff7e1fde3824951ebb",
     "gulp-angular-filesort": "^1.1.1",
     "gulp-angular-templatecache": "^1.8.0",
@@ -51,6 +56,7 @@
     "postcss-loader": "^0.8.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "2.1.0-beta.8",
     "webpack-split-by-path": "^0.0.10"
   },
