--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "angular-touch": "^1.5.7",
     "angular-ui-bootstrap": "^2.0.0",
     "angular-ui-router": "^0.3.1",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "bootstrap-sass": "^3.3.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0-beta.2",
@@ -38,6 +39,7 @@
     "gulp-util": "^3.0.7",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.9.0",
+    "imports-loader": "^0.6.5",
     "isparta-loader": "^2.0.0",
     "jasmine": "^2.4.1",
     "json-loader": "^0.5.4",
