--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
     "angular-animate": "^1.5.7",
     "angular-touch": "^1.5.7",
     "angular-ui-bootstrap": "^2.0.0",
-    "angular-ui-router": "^0.3.1",
+    "angular-ui-router": "1.0.0-beta.1",
     "bootstrap-sass": "^3.3.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0-beta.2",
     "autoprefixer": "^6.2.2",
-    "babel-core": "^6.2.0",
+    "babel-core": "^6.14.0",
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.0",
     "babel-polyfill": "^6.7.4",
@@ -20,11 +20,13 @@
     "css-loader": "^0.23.1",
     "del": "^2.0.2",
     "es6-shim": "^0.35.0",
-    "eslint": "^2.11.0",
+    "eslint": "^3.2.2",
+    "eslint-config-angular": "^0.5.0",
     "eslint-config-xo-space": "^0.12.0",
     "eslint-loader": "^1.3.0",
+    "eslint-plugin-angular": "^1.3.0",
     "eslint-plugin-babel": "^3.1.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "file-loader": "^0.9.0",
     "gulp": "gulpjs/gulp#4ed9a4a3275559c73a396eff7e1fde3824951ebb",
     "gulp-angular-filesort": "^1.1.1",
@@ -58,8 +60,7 @@
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "webpack": "2.1.0-beta.8",
-    "webpack-split-by-path": "^0.0.10"
+    "webpack": "2.1.0-beta.20"
   },
   "scripts": {
     "build": "gulp",
